@@ -7,6 +7,7 @@
 	files in */tmp/* or /*.tmp/* directories
 	(CygbuildPatchApplyQuiltMaybe): Improve checking of
 	quilt status code.
+	(CygbuildCmdInstallList): Warn about unknown variables.
 
 2014-06-14 Sat  Jari Aalto  <jari.aalto@cante.net>
 
